Update dependencies, refactor main app structure, and enhance user experience with theme management and Seki functionality. Added shared preferences support and improved UI components across various pages.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_auth: ^6.1.4
   cloud_firestore: ^6.1.2
 
+  # Local Storage
+  shared_preferences: ^2.3.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
