--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   # Share
   share_plus: ^10.1.2
 
+  # File operations
+  file_picker: ^8.1.4
+  path_provider: ^2.1.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
