--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   # File operations
   file_picker: ^8.1.4
   path_provider: ^2.1.5
+  
+  # Excel support
+  excel: ^4.0.6
 
 dev_dependencies:
   flutter_test:
