Rename project from 'kiseki' to 'kien' across all relevant files, including configuration, manifest, and UI components, to reflect the new branding.

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "kiseki",
-    "short_name": "kiseki",
+    "name": "kien",
+    "short_name": "kien",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
