--- a/firebase.json
+++ b/firebase.json
@@ -19,6 +19,10 @@
       }
     }
   },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
   "functions": [
     {
       "source": "functions",
