--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   # Share
   share_plus: ^10.1.2
 
+  # Open URLs
+  url_launcher: ^6.3.1
+
   # File operations
   file_picker: ^8.1.4
   path_provider: ^2.1.5
