Update Google Sign-In setup and project configuration to use new package name `com.kenzo.kien`
- Revised `GOOGLE_SIGNIN_SETUP.md` to reflect the new package name and updated instructions for obtaining SHA-1 and SHA-256 keys.
- Updated `build.gradle.kts`, `google-services.json`, and various platform-specific files to replace occurrences of the old package name `com.example.kiseki` with `com.kenzo.kien`.
- Added `MainActivity.kt` for the new package structure.
- Ensured all references in iOS, Linux, macOS, and Windows configurations are consistent with the new package name.

--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -7,7 +7,7 @@ project(runner LANGUAGES CXX)
 set(BINARY_NAME "kien")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.example.kiseki")
+set(APPLICATION_ID "com.kenzo.kien")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
