--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = kien
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.kiseki
+PRODUCT_BUNDLE_IDENTIFIER = com.kenzo.kien
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2026 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2026 com.kenzo.kien. All rights reserved.
