Add Delete Account URL documentation and Firebase hosting setup
- Created a new `DELETE_ACCOUNT_URL.md` file detailing the requirements for a Delete Account URL for Google Play compliance.
- Added a standalone `public/delete-account.html` page outlining the steps for users to delete their accounts and the data that will be removed.
- Updated `firebase.json` to configure Firebase Hosting for serving the new static files.
- Included instructions for deploying the hosting and integrating the URL into the Google Play Console.

--- a/firebase.json
+++ b/firebase.json
@@ -36,5 +36,9 @@
         "*.local"
       ]
     }
-  ]
+  ],
+  "hosting": {
+    "public": "public",
+    "ignore": [".git", "firebase.json", "**/.*", "**/node_modules/**"]
+  }
 }
