Add intl package for date formatting and refactor user profile UI
- Introduced the `intl` package (version 0.19.0) for enhanced date formatting capabilities.
- Refactored the user profile and other user profile pages to implement a new segmented button layout for improved navigation between list and categories views.
- Created a dedicated `DeviceTimelineVisual` widget to visualize device usage, enhancing the overall user experience and UI consistency.
- Updated sorting logic for displaying user content based on device usage dates, ensuring a more intuitive presentation of data.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   # App version info (for About in settings)
   package_info_plus: ^9.0.0
 
+  # Date formatting
+  intl: ^0.19.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
